fix spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -348,11 +348,11 @@ body {
   max-width: 90vw;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px 0 0 0;
-  gap: 30px
+  margin: -10px 0 0 0;
 }
 
 .actual-announcements > * {
+  margin: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
